<resources>
    <string name="app_name">Workout App</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="workout_app">Workout App</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recover_account">Recover Account</string>
    <string name="register_account">Register Account</string>
    <string name="button_to_add_workout">button to add workout</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_a_workout">Add a Workout</string>
    <string name="create_your_workout">Create your Workout</string>
    <string name="tv_treino_empty">Workout List is Empty</string>
    <string name="update">Update</string>
</resources>